<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adrst.ex3.MainActivity">

    <Spinner
        android:id="@+id/spinner_friends"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        />

    <TableLayout
        android:layout_width="361dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_string"
                android:layout_gravity="right" />
            <TextView
                android:id="@+id/view_fetchedName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_placeholder"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/view_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday_string"
                android:gravity="right"/>
            <TextView
                android:id="@+id/view_fetchedBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday_placeholder"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_changeFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickChangeFriend"
        android:text="@string/change_user_information"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559"/>

    <GridLayout
        android:id="@+id/grid_changeFriend"
        android:visibility="invisible"
        android:layout_width="373dp"
        android:layout_height="103dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/view_newName"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/new_name" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/view_newBirthday"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/new_birthday" />

        <EditText
            android:id="@+id/edit_birthday"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:inputType="text"/>

        <Button
            android:id="@+id/btn_saveChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:onClick="onClickSaveChanges"
            android:text="@string/save_changes"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/btn_discard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:onClick="onClickDiscard"
            android:text="@string/cancel_changes"
            android:textSize="12sp"/>

    </GridLayout>

    <Button
        android:id="@+id/btn_addNewFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickNewFriend"
        android:text="@string/add_new"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
        android:id="@+id/view_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_friend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"/>


</android.support.constraint.ConstraintLayout>
